--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <meta-data
+            android:name="roboguice.annotations.packages"
+            android:value="roboguice,org.faudroids.foodcube"
+            />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="d24b6175dc50a0705e30d49f9f580ca61cbddbed" />
+    </application>
 </manifest>
