--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <meta-data
             android:name="roboguice.annotations.packages"
-            android:value="roboguice,org.faudroids.foodcube"
+            android:value="roboguice,org.faudroids.keepgoing"
             />
         <meta-data
             android:name="io.fabric.ApiKey"
