--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ gradle.projectsEvaluated {
 dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.jakewharton.timber:timber:3.1.0'
+    compile 'com.google.android.gms:play-services-fitness:7.5.0'
     compile 'org.roboguice:roboguice:3.0.1'
     provided 'org.roboguice:roboblender:3.0.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.4.0@aar') {
