--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.GoogleFitDemoActivity"
+            />
+        <activity
+            android:name=".ui.MapsActivity"
             />
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"
+            />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB3CL9NYeZVK6DmvUWhAdWD1k_iWlY-y-Y"
             />
         <meta-data
             android:name="roboguice.annotations.packages"
