--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:name=".app.KeepGoingApp"
         >
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,10 +18,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.MainActivity"
+            />
+        <activity
             android:name=".ui.GoogleFitDemoActivity"
             />
         <activity
             android:name=".ui.MapsActivity"
+            />
+        <service
+            android:name=".google.GoogleApiClientService"
             />
 
         <meta-data
