ui: add simple recording demo activity
Includes sessions + data storage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.faudroids.keepgoing" >
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,6 +28,9 @@
             />
         <activity
             android:name=".ui.MapsActivity"
+            />
+        <activity
+            android:name=".ui.RecordingDemoActivity"
             />
         <service
             android:name=".google.GoogleApiClientService"
