--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.jakewharton.timber:timber:3.1.0'
     compile 'com.google.android.gms:play-services-fitness:7.5.0'
+    compile 'io.reactivex:rxjava:1.0.12'
+    compile 'io.reactivex:rxandroid:0.25.0'
     compile 'org.roboguice:roboguice:3.0.1'
     provided 'org.roboguice:roboblender:3.0.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.4.0@aar') {
