ui: add sessions overview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <activity
             android:name=".ui.RecordingDemoActivity"
             />
+        <activity
+            android:name=".ui.SessionsOverviewActivity"
+            />
         <service
             android:name=".recording.GoogleApiClientService"
             />
