--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,9 @@ gradle.projectsEvaluated {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.jakewharton.timber:timber:3.1.0'
     compile 'com.google.android.gms:play-services-fitness:7.5.0'
     compile 'io.reactivex:rxjava:1.0.12'
