ui: add SessionDetailsActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <activity
             android:name=".ui.SessionsOverviewActivity"
             />
+        <activity
+            android:name=".ui.SessionDetailsActivity"
+            />
         <service
             android:name=".recording.GoogleApiClientService"
             />
