--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-fitness:7.5.0'
     compile 'io.reactivex:rxjava:1.0.12'
     compile 'io.reactivex:rxandroid:0.25.0'
+    compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
     compile 'org.roboguice:roboguice:3.0.1'
     provided 'org.roboguice:roboblender:3.0.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.4.0@aar') {
