ui: add empty ChallengeDetailsActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
         <activity
             android:name=".ui.SessionDetailsActivity"
             />
+        <activity
+            android:name=".ui.ChallengeDetailsActivity"
+            />
         <service
             android:name=".googleapi.GoogleApiClientService"
             />
