--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-fitness:7.5.0'
     compile 'io.reactivex:rxjava:1.0.12'
     compile 'io.reactivex:rxandroid:0.25.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
     compile 'com.getbase:floatingactionbutton:1.10.0'
     apt 'com.raizlabs.android:DBFlow-Compiler:2.2.1'
