--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,30 +27,39 @@
         <activity
             android:name=".ui.MainDrawerActivity"
             android:theme="@style/DrawerTheme"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".ui.GoogleFitDemoActivity"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".ui.MapsActivity"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".ui.RecordingActivity"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".ui.SessionsOverviewActivity"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".ui.SessionDetailsActivity"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".ui.ChallengeDetailsActivity"
+            android:screenOrientation="portrait"
             />
         <service
             android:name=".googleapi.GoogleApiClientService"
+            android:screenOrientation="portrait"
             />
         <service
             android:name=".recording.RecordingService"
+            android:screenOrientation="portrait"
             />
 
         <meta-data
