ui: add toolbar title anim to challenge details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity
             android:name=".ui.ChallengeDetailsActivity"
             android:screenOrientation="portrait"
+            android:theme="@style/AppThemeNoActionbar"
             />
         <service
             android:name=".googleapi.GoogleApiClientService"
