ui: set light colors for nav drawer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity
             android:name=".ui.MainDrawerActivity"
-            android:theme="@style/DrawerTheme"
+            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar"
             android:screenOrientation="portrait"
             />
         <activity
